set exact image dimensions to avoid stretch/skew from flexbox

--- a/microblog.css
+++ b/microblog.css
@@ -29,8 +29,8 @@ html, body, div, span {
 }
 
 .post .post-user--avatar img {
-    width: 100%;
-    height: 100%;
+    width: 24px;
+    height: 24px;
     display: block;
     overflow: hidden;
     position: relative;
@@ -275,6 +275,11 @@ form button {
     
     .post .post-user--avatar {
         border-radius: 24px;
+        width: 48px;
+        height: 48px;
+    }
+
+    .post .post-user--avatar img {
         width: 48px;
         height: 48px;
     }
